Fix footer overflow

--- a/css/factory.css
+++ b/css/factory.css
@@ -1956,12 +1956,17 @@ pre[data-line] {
 
 #footer {
 	background: #282828;
+	background-image: -webkit-linear-gradient(#FBFDFB 1.3rem, #ccc 1.3rem, #ccc 1.5rem, #282828 1.5rem);
+	background-image: -moz-linear-gradient(#FBFDFB 1.3rem, #ccc 1.3rem, #ccc 1.5rem, #282828 1.5rem);
+	background-image: -ms-linear-gradient(#FBFDFB 1.3rem, #ccc 1.3rem, #ccc 1.5rem, #282828 1.5rem);
+	background-image: -o-linear-gradient(#FBFDFB 1.3rem, #ccc 1.3rem, #ccc 1.5rem, #282828 1.5rem);
+	background-image: linear-gradient(#FBFDFB 1.3rem, #ccc 1.3rem, #ccc 1.5rem, #282828 1.5rem);
 	width: 100%;
-	height: 10rem;
+	height: 11.5rem;
 	clear: both;
 	color: #fff;
-	border-top: 2px solid #ccc;
 	font-weight: 300;	
+	overflow: hidden;
 }
 
 #footer.sticky {
@@ -1972,7 +1977,7 @@ pre[data-line] {
 #footer .footer-community,
 #footer .footer-links {
 	position: absolute;
-	top: 2.5rem;
+	top: 3.8rem;
 	left: 30px;
 }
 
@@ -2016,7 +2021,7 @@ pre[data-line] {
 #footer .footer-factory {
 	position: relative;
 	margin-left: 450px;
-	bottom: 0;
+	top: 15px;
 	width: 140px;
 	height: 140px;
 	border-radius: 70px;
@@ -2049,8 +2054,8 @@ pre[data-line] {
 
 #footer .footer-factory em {
 	background: url(../img/factory.png) -185px -12px no-repeat;
-	width: 140px;
-	height: 140px;
+	width: 141px;
+	height: 141px;
 	text-indent: -1000em;
 	display: block;
 	border-radius: 70px;
